manifests/istio/istio_peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: ${istio_peer_authentication_mode}
