manifests/istio/istio_ingress_gateway_apps.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway-apps
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway-apps
  servers:
  - hosts:
    %{~ for host in istio_ingress_apps_domains ~}
    - "${host}"
    %{~ endfor ~}
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - hosts:
    %{~ for host in istio_ingress_apps_domains ~}
    - "${host}"
    %{~ endfor ~}
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: ${istio_gateway_apps_cert_secret_name}
      mode: SIMPLE
