manifests/istio/istio_authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway-mgmt
  action: ALLOW
  rules:
  - from:
    - source:
        remoteIpBlocks:
        %{ for ip_addr in src_ip_range ~}
        - ${ip_addr}
        %{ endfor ~}
